# $Id: CHANGELOG,v 1.10 2003/09/30 08:45:21 jaco Exp $

* Tue, Sep 30, 2003, 0.5.6-cvs
  + Buchan Milne <bgmile@cae.co.za>:
    [mklivecd]:
      - Fix rootdir to use the kernel/modules from the chroot
      - Add basic bootsplash support (doesn't work with a chroot
        at present) if bootsplash is installed on the image'd
        system
  + Jaco Greeff <jaco@linuxminicd.org>:
    [FAQ]:
      - Updated FAQ to include some compression parameter
        statistics (describes mklivecd '--blocksize' and
        '--looptype' options)
    [Makefile]:
      - Combined piped sed commands into one
      - Removed non-existing busybox and cloop version
        replacements for specfile generation (legacy)
      - Distribute generated specfile by default in 'dist',
        instead of the previously included '.in' (This allows
        a build via the "rpmbuild -t[abs] mklivecd-<ver>.tar.bz2"
        command)
      - Ability to build CVS dist per date
      - Add RPM release information for spec file generation
    [README]:
      - Include CVS location
    [linuxrc]:
      - Only make symlinks to /var/lib/{rpm,urpmi} directories, the
        rest are actual writables
      - Complete rework of creation of /var directories
    [mklivecd]:
      - Changed default blocksize back to 64K (sane default for
        fastest operation in decompressing the compressed image)
      - Added '--blocksize' option, accepting sizes in K, eg.
        '--blocksize 224' to use a 224K size for the compressed
        blocks.
      - Added '--lowmem' option, writing created iso to disk
        before compression. (Huge saving on memory comsumption
        for low memory systems, expensive on disk space)
      - case statement now has one combined entry for '-h', '-?'
        and '--help' command-line options
    [mklivecd.spec]:
      - Synced with contrib spec
      - Ability to auto-generate version info for changelog
      - Build CVS specs as per MDK guidelines


* Thu, Sep 25, 2003, 0.5.5