@@ -1,4 +1,4 @@
-# $Id: CHANGELOG,v 1.10 2003/09/30 08:45:21 jaco Exp $
+# $Id: CHANGELOG,v 1.11 2003/09/30 09:44:24 jaco Exp $
 
 * Tue, Sep 30, 2003, 0.5.6-cvs
   + Buchan Milne <bgmile@cae.co.za>:
@@ -37,8 +37,10 @@
       - Added '--lowmem' option, writing created iso to disk
         before compression. (Huge saving on memory comsumption
         for low memory systems, expensive on disk space)
-      - case statement now has one combined entry for '-h', '-?'
+      - Case statement now has one combined entry for '-h', '-?'
         and '--help' command-line options
+      - Added '--final' option, stripping unneeded lines from the
+        scripts on the initrd image, saving some space
     [mklivecd.spec]:
       - Synced with contrib spec
       - Ability to auto-generate version info for changelog
